--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
         <li><a href="">Портфолио</a></li>
         <li><a href="">Контакты</a></li>
     </ul>
+</nav>
     <ul>
         <li><a href="">info@devstudio.com</a></li>
         <li><a href="">+380961111111</a></li>
     </ul>
-</nav>
 </header>
+<main>
 <div>
     <section>
 <h1>Эффективные решения для вашего бизнеса</h1>
@@ -34,10 +35,23 @@
     <li><h2>Планирование</h2><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
     <li><h2>Современные технологии</h2><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
 </ul>
-
+</section>
+<section>
+<h2>Чем мы занимаемся</h2>
+<img src="/images/box 1.jpg" alt="analyze" width="370" height="294">
+<img src="/images/img.jpg" alt="check" width="370" height="294">
+<img src="/images/box 3.jpg" alt="show" width="370" height="294">
+</section>
+<section>
+<h2>Наша команда</h2>
+<img src="" alt="analyze" width="270" height="260">
+<img src="" alt="check" width="270" height="260">
+<img src="" alt="show" width="270" height="260">
+<img src="" alt="show" width="270" height="260">
 </section>
 
 
+</main>
 <footer></footer>
 
 
