--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <nav>
-    <a href="/"><img src="./images/WebStudio.svg" alt="Webstudio"> </a>
+    <a href="/"><span>Web</span>Studio</a>
     <ul>
         <li><a href="">Студия</a></li>
         <li><a href="">Портфолио</a></li>
@@ -24,30 +24,32 @@
 <main>
 <div>
     <section>
+       <!--<h2>Baner</h2>-->
 <h1>Эффективные решения для вашего бизнеса</h1>
-<a href="">Заказать услугу</a>  
+<button type="button">Заказать услугу</button>
     </section>
 </div>
 <section>
+    <!--<h2>Наши цели</h2>-->
     <ul>
-    <li><h2>Внимание к деталям</h2><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-    <li><h2>Пунктуальность</h2><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-    <li><h2>Планирование</h2><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-    <li><h2>Современные технологии</h2><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
+    <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
+    <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+    <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+    <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
 </ul>
 </section>
 <section>
 <h2>Чем мы занимаемся</h2>
-<img src="/images/box 1.jpg" alt="analyze" width="370" height="294">
-<img src="/images/img.jpg" alt="check" width="370" height="294">
-<img src="/images/box 3.jpg" alt="show" width="370" height="294">
+<img src="/images/box1.jpg" alt="analyze" width="370" height="294">
+<img src="/images/box2.jpg" alt="check" width="370" height="294">
+<img src="/images/box3.jpg" alt="show" width="370" height="294">
 </section>
 <section>
 <h2>Наша команда</h2>
-<img src="" alt="analyze" width="270" height="260">
-<img src="" alt="check" width="270" height="260">
-<img src="" alt="show" width="270" height="260">
-<img src="" alt="show" width="270" height="260">
+<img src="/images/Igor.jpg" alt="Igor" width="270" height="260">
+<img src="/images/Olga.jpg" alt="Olga" width="270" height="260">
+<img src="/images/Mike.jpg" alt="Nikolai" width="270" height="260">
+<img src="/images/Michael.jpg" alt="Michael" width="270" height="260">
 </section>
 
 
