--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,21 +17,18 @@
     </ul>
 </nav>
     <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+380961111111</a></li>
-    </ul>
+        <li><a href="mail to: info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tell: +380961111111" class="contact-link">+380961111111</a></li>
 </header>
 <main>
-<div>
-    <section>
-       <!--<h2>Baner</h2>-->
+<section>
+<h2 >Main Baner</h2>
 <h1>Эффективные решения для вашего бизнеса</h1>
 <button type="button">Заказать услугу</button>
-    </section>
-</div>
+</section>
 <section>
-    <!--<h2>Наши цели</h2>-->
-    <ul>
+    <h2>Наши цели</h2>
+<ul>
     <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
     <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
     <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
@@ -40,23 +37,50 @@
 </section>
 <section>
 <h2>Чем мы занимаемся</h2>
-<img src="/images/box1.jpg" alt="analyze" width="370" height="294">
-<img src="/images/box2.jpg" alt="check" width="370" height="294">
-<img src="/images/box3.jpg" alt="show" width="370" height="294">
+<ul>
+    <li><img src="/images/box1.jpg" alt="analyze" width="370"></li>
+    <li><img src="/images/box2.jpg" alt="check" width="370"></li>
+    <li><img src="/images/box3.jpg" alt="show" width="370"></li>
+</ul>
 </section>
 <section>
 <h2>Наша команда</h2>
-<img src="/images/Igor.jpg" alt="Igor" width="270" height="260">
-<img src="/images/Olga.jpg" alt="Olga" width="270" height="260">
-<img src="/images/Mike.jpg" alt="Nikolai" width="270" height="260">
-<img src="/images/Michael.jpg" alt="Michael" width="270" height="260">
+<ul>
+    <li>
+    <img src="/images/Igor.jpg" alt="Igor" width="270">
+    <h3>Игорь Демьяненко</h3>
+    <p>Product Designer</p>
+    </li>
+    <li>
+    <img src="/images/Olga.jpg" alt="Olga" width="270">
+    <h3>Ольга Репина</h3>
+    <p>Frontend Developer</p>
+    </li>
+    <li>
+    <img src="/images/Mike.jpg" alt="Nikolai" width="270">
+    <h3>Николай Тарасов</h3>
+    <p>Marketing</p>
+    </li>
+    <li>
+    <img src="/images/Michael.jpg" alt="Michael" width="270">
+    <h3>Михаил Ермаков</h3>
+    <p>UI Designer</p>
+    </li>
+</ul>
 </section>
-
-
 </main>
-<footer></footer>
-
-
-
+<footer>
+<section>
+<h2>Footer<h2>
+<a href="/"><span>Web</span>Studio</a>
+<address>
+<h3>г. Киев, пр-т Леси Украинки, 26</h3>
+<ul>
+    <li><a href="mail to: info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tell: +380961111111" class="contact-link">+380961111111</a></li>
+</ul>
+</address>
+</section>
+</footer>
 </body>
 </html>
