--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </ul>
 </nav>
     <ul>
-        <li><a href="mail to: info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tell: +380961111111" class="contact-link">+380961111111</a></li>
+        <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tell:+380961111111">+380961111111</a></li>
+    </ul>
 </header>
 <main>
 <section>
@@ -71,13 +72,13 @@
 </main>
 <footer>
 <section>
-<h2>Footer<h2>
+<h2>Footer</h2>
 <a href="/"><span>Web</span>Studio</a>
 <address>
-<h3>г. Киев, пр-т Леси Украинки, 26</h3>
+<p>г. Киев, пр-т Леси Украинки, 26</p>
 <ul>
-    <li><a href="mail to: info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tell: +380961111111" class="contact-link">+380961111111</a></li>
+    <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tell:+380961111111">+380961111111</a></li>
 </ul>
 </address>
 </section>
