--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
 <section>
 <h2>Чем мы занимаемся</h2>
 <ul>
-    <li><img src="/images/box1.jpg" alt="analyze" width="370"></li>
-    <li><img src="/images/box2.jpg" alt="check" width="370"></li>
-    <li><img src="/images/box3.jpg" alt="show" width="370"></li>
+    <li><img src="./images/box1.jpg" alt="analyze" width="370"></li>
+    <li><img src="./images/box2.jpg" alt="check" width="370"></li>
+    <li><img src="./images/box3.jpg" alt="show" width="370"></li>
 </ul>
 </section>
 <section>
 <h2>Наша команда</h2>
 <ul>
     <li>
-    <img src="/images/Igor.jpg" alt="Igor" width="270">
+    <img src="./images/Igor.jpg" alt="Igor" width="270">
     <h3>Игорь Демьяненко</h3>
     <p>Product Designer</p>
     </li>
     <li>
-    <img src="/images/Olga.jpg" alt="Olga" width="270">
+    <img src="./images/Olga.jpg" alt="Olga" width="270">
     <h3>Ольга Репина</h3>
     <p>Frontend Developer</p>
     </li>
     <li>
-    <img src="/images/Mike.jpg" alt="Nikolai" width="270">
+    <img src="./images/Mike.jpg" alt="Nikolai" width="270">
     <h3>Николай Тарасов</h3>
     <p>Marketing</p>
     </li>
     <li>
-    <img src="/images/Michael.jpg" alt="Michael" width="270">
+    <img src="./images/Michael.jpg" alt="Michael" width="270">
     <h3>Михаил Ермаков</h3>
     <p>UI Designer</p>
     </li>
