--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/"><span>Web</span>Studio</a>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -17,13 +17,12 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tell:+380961111111">+380961111111</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+380961111111</a></li>
       </ul>
     </header>
     <main>
       <section>
-        <h2>Main Baner</h2>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
@@ -72,22 +71,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./images/Igor.jpg" alt="Igor" width="270" />
+            <img src="./images/igor.jpg" alt="Igor" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Olga.jpg" alt="Olga" width="270" />
+            <img src="./images/olga.jpg" alt="Olga" width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Mike.jpg" alt="Nikolai" width="270" />
+            <img src="./images/mike.jpg" alt="Nikolai" width="270" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Michael.jpg" alt="Michael" width="270" />
+            <img src="./images/michael.jpg" alt="Michael" width="270" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -95,17 +94,21 @@
       </section>
     </main>
     <footer>
-      <section>
-        <h2>Footer</h2>
-        <a href="/"><span>Web</span>Studio</a>
-        <address>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-          <ul>
-            <li><a href="emailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tell:+380961111111">+380961111111</a></li>
-          </ul>
-        </address>
-      </section>
+      <a href="./index.html"><span>Web</span>Studio</a>
+      <address>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/Q2CxQmNGnSaNy8GW7"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+380961111111</a></li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
